--- a/Tika_GeoTopic_Parser/source code/geotopicParserv2(description).ipynb
+++ b/Tika_GeoTopic_Parser/source code/geotopicParserv2(description).ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process of Running GeoTopic Parser:\n",
+    "\n",
+    "1. Navigate to directory /Tika_GeoTopic_Parser and run command to start lucene server:\n",
+    "    ```bash\n",
+    "    lucene-geo-gazetteer -server\n",
+    "    ```\n",
+    "    - If the server is running, you should see this: \n",
+    "        ```bash\n",
+    "        INFO: Starting ProtocolHandler [\"http-nio-8765\"]\n",
+    "        ```\n",
+    "2. In new terminal, navigate to directory /Tika_GeoTopic_Parser and run command to start geotopic server: \n",
+    "     ```bash\n",
+    "    ./geotopic-server\n",
+    "    ```\n",
+    "    - If the server is running, you should see this: \n",
+    "        ```bash\n",
+    "        INFO  [main] 16:25:04,222 org.apache.tika.server.core.TikaServerProcess Started Apache Tika server ff835cb6-9aa1-4817-ba8d-d035eb174c87 at http://localhost:9998/\n",
+    "        ```\n",
+    "\n",
+    "3. In new terminal, navigate to directory /Tika_GeoTopic_Parser and run command to test servers: \n",
+    "    ```bash\n",
+    "        java -cp \\\n",
+    "        \"tika-build/tika-app-2.7.0.jar:tika-build/tika-parser-nlp-package-2.7.0.jar:./location-ner-model:./geotopic-mime\" \\\n",
+    "        -Dorg.apache.tika.mime.custom-mimetypes=geotopic-mime/org/apache/tika/mime/custom-mimetypes.xml \\\n",
+    "        org.apache.tika.cli.TikaCLI \\ -m polar.geot\n",
+    "    ```\n",
+    "    - If command is running correctly, the output should be: \n",
+    "        ```bash\n",
+    "        United States, 39.76, -98.5    \n",
+    "        ```\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -11778,6 +11815,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
