saved visualization as png

--- a/5_Report Questions/Question2.ipynb
+++ b/5_Report Questions/Question2.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
-    "import re\n"
+    "import re\n",
+    "import os"
    ]
   },
   {
@@ -24,353 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>country</th>\n",
-       "      <th>description</th>\n",
-       "      <th>location</th>\n",
-       "      <th>state</th>\n",
-       "      <th>state_abbrev</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>city_longitude</th>\n",
-       "      <th>city_latitude</th>\n",
-       "      <th>Entity Labels</th>\n",
-       "      <th>Entity Texts</th>\n",
-       "      <th>GeoTopic Name</th>\n",
-       "      <th>GeoTopic Latitude</th>\n",
-       "      <th>GeoTopic Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ada</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Ada witch - Sometimes you can see a misty blue...</td>\n",
-       "      <td>Ada Cemetery</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>-85.504893</td>\n",
-       "      <td>42.962106</td>\n",
-       "      <td>-85.495480</td>\n",
-       "      <td>42.960727</td>\n",
-       "      <td>['ORG', 'QUANTITY', 'FAC', 'ORG', 'GPE', 'TIME...</td>\n",
-       "      <td>['Ada witch -', '3-mile', 'the Ada Cemetery', ...</td>\n",
-       "      <td>Ada Cemetery</td>\n",
-       "      <td>42.96252</td>\n",
-       "      <td>-85.50474</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Addison</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>A little girl was killed suddenly while waitin...</td>\n",
-       "      <td>North Adams Rd.</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>-84.381843</td>\n",
-       "      <td>41.971425</td>\n",
-       "      <td>-84.347168</td>\n",
-       "      <td>41.986434</td>\n",
-       "      <td>['DATE', 'DATE']</td>\n",
-       "      <td>['in.1 month later', 'this day']</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Adrian</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>If you take Gorman Rd. west towards Sand Creek...</td>\n",
-       "      <td>Ghost Trestle</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>-84.035656</td>\n",
-       "      <td>41.904538</td>\n",
-       "      <td>-84.037166</td>\n",
-       "      <td>41.897547</td>\n",
-       "      <td>['FAC', 'GPE', 'CARDINAL', 'CARDINAL', 'TIME',...</td>\n",
-       "      <td>['Gorman Rd', 'Sand Creek', 'one', 'one', 'Lat...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Adrian</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>In the 1970's, one room, room 211, in the old ...</td>\n",
-       "      <td>Siena Heights University</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>-84.017565</td>\n",
-       "      <td>41.905712</td>\n",
-       "      <td>-84.037166</td>\n",
-       "      <td>41.897547</td>\n",
-       "      <td>['DATE', 'CARDINAL', 'CARDINAL', 'DATE', 'CARD...</td>\n",
-       "      <td>['1970', 'one', '211', 'today', 'one', 'two', ...</td>\n",
-       "      <td>Sterling Heights</td>\n",
-       "      <td>42.58031</td>\n",
-       "      <td>-83.03020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Albion</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Kappa Delta Sorority - The Kappa Delta Sororit...</td>\n",
-       "      <td>Albion College</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>-84.745177</td>\n",
-       "      <td>42.244006</td>\n",
-       "      <td>-84.753030</td>\n",
-       "      <td>42.243097</td>\n",
-       "      <td>['ORG', 'CARDINAL']</td>\n",
-       "      <td>['Kappa Delta Sorority - The Kappa Delta Soror...</td>\n",
-       "      <td>Albion College Historical Marker</td>\n",
-       "      <td>42.24662</td>\n",
-       "      <td>-84.74420</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10987</th>\n",
-       "      <td>Westminster</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>at 12 midnight you can see a lady with two lit...</td>\n",
-       "      <td>city hall</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>CO</td>\n",
-       "      <td>-105.048936</td>\n",
-       "      <td>39.862610</td>\n",
-       "      <td>-105.037205</td>\n",
-       "      <td>39.836653</td>\n",
-       "      <td>['TIME', 'CARDINAL', 'PERSON']</td>\n",
-       "      <td>['12 midnight', 'two', 'Sheridan St.']</td>\n",
-       "      <td>City Hall</td>\n",
-       "      <td>51.50492</td>\n",
-       "      <td>-0.07867</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10988</th>\n",
-       "      <td>Westminster</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Is haunted by the victims of a murder that hap...</td>\n",
-       "      <td>Pillar of Fire</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>CO</td>\n",
-       "      <td>-105.032091</td>\n",
-       "      <td>39.847237</td>\n",
-       "      <td>-105.037205</td>\n",
-       "      <td>39.836653</td>\n",
-       "      <td>['DATE']</td>\n",
-       "      <td>['years ago']</td>\n",
-       "      <td>Pillar of Fire Church</td>\n",
-       "      <td>41.41787</td>\n",
-       "      <td>-75.06767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10989</th>\n",
-       "      <td>Wheat Ridge</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>The institution was for kids 18 years old and ...</td>\n",
-       "      <td>Ridge Mental Institution</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>CO</td>\n",
-       "      <td>-105.063974</td>\n",
-       "      <td>39.769726</td>\n",
-       "      <td>-105.077206</td>\n",
-       "      <td>39.766098</td>\n",
-       "      <td>['DATE', 'DATE', 'CARDINAL', 'CARDINAL']</td>\n",
-       "      <td>['18 years old', '70', 'one', 'hundreds']</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10990</th>\n",
-       "      <td>Wheat Ridge</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Gymnasium -  their have been reports of a litt...</td>\n",
-       "      <td>Wheat Ridge Middle School</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>CO</td>\n",
-       "      <td>-105.103613</td>\n",
-       "      <td>39.764055</td>\n",
-       "      <td>-105.077206</td>\n",
-       "      <td>39.766098</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10991</th>\n",
-       "      <td>Woodland Park</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Cadets from the Air Force Academy participatin...</td>\n",
-       "      <td>Saylor Park Forest</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>CO</td>\n",
-       "      <td>-105.022763</td>\n",
-       "      <td>39.116658</td>\n",
-       "      <td>-105.056930</td>\n",
-       "      <td>38.993881</td>\n",
-       "      <td>['ORG', 'GPE', 'DATE']</td>\n",
-       "      <td>['the Air Force Academy', 'Survival', 'between...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10992 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                city        country  \\\n",
-       "0                Ada  United States   \n",
-       "1            Addison  United States   \n",
-       "2             Adrian  United States   \n",
-       "3             Adrian  United States   \n",
-       "4             Albion  United States   \n",
-       "...              ...            ...   \n",
-       "10987    Westminster  United States   \n",
-       "10988    Westminster  United States   \n",
-       "10989    Wheat Ridge  United States   \n",
-       "10990    Wheat Ridge  United States   \n",
-       "10991  Woodland Park  United States   \n",
-       "\n",
-       "                                             description  \\\n",
-       "0      Ada witch - Sometimes you can see a misty blue...   \n",
-       "1      A little girl was killed suddenly while waitin...   \n",
-       "2      If you take Gorman Rd. west towards Sand Creek...   \n",
-       "3      In the 1970's, one room, room 211, in the old ...   \n",
-       "4      Kappa Delta Sorority - The Kappa Delta Sororit...   \n",
-       "...                                                  ...   \n",
-       "10987  at 12 midnight you can see a lady with two lit...   \n",
-       "10988  Is haunted by the victims of a murder that hap...   \n",
-       "10989  The institution was for kids 18 years old and ...   \n",
-       "10990  Gymnasium -  their have been reports of a litt...   \n",
-       "10991  Cadets from the Air Force Academy participatin...   \n",
-       "\n",
-       "                        location     state state_abbrev   longitude  \\\n",
-       "0                   Ada Cemetery  Michigan           MI  -85.504893   \n",
-       "1                North Adams Rd.  Michigan           MI  -84.381843   \n",
-       "2                  Ghost Trestle  Michigan           MI  -84.035656   \n",
-       "3       Siena Heights University  Michigan           MI  -84.017565   \n",
-       "4                 Albion College  Michigan           MI  -84.745177   \n",
-       "...                          ...       ...          ...         ...   \n",
-       "10987                  city hall  Colorado           CO -105.048936   \n",
-       "10988             Pillar of Fire  Colorado           CO -105.032091   \n",
-       "10989   Ridge Mental Institution  Colorado           CO -105.063974   \n",
-       "10990  Wheat Ridge Middle School  Colorado           CO -105.103613   \n",
-       "10991         Saylor Park Forest  Colorado           CO -105.022763   \n",
-       "\n",
-       "        latitude  city_longitude  city_latitude  \\\n",
-       "0      42.962106      -85.495480      42.960727   \n",
-       "1      41.971425      -84.347168      41.986434   \n",
-       "2      41.904538      -84.037166      41.897547   \n",
-       "3      41.905712      -84.037166      41.897547   \n",
-       "4      42.244006      -84.753030      42.243097   \n",
-       "...          ...             ...            ...   \n",
-       "10987  39.862610     -105.037205      39.836653   \n",
-       "10988  39.847237     -105.037205      39.836653   \n",
-       "10989  39.769726     -105.077206      39.766098   \n",
-       "10990  39.764055     -105.077206      39.766098   \n",
-       "10991  39.116658     -105.056930      38.993881   \n",
-       "\n",
-       "                                           Entity Labels  \\\n",
-       "0      ['ORG', 'QUANTITY', 'FAC', 'ORG', 'GPE', 'TIME...   \n",
-       "1                                       ['DATE', 'DATE']   \n",
-       "2      ['FAC', 'GPE', 'CARDINAL', 'CARDINAL', 'TIME',...   \n",
-       "3      ['DATE', 'CARDINAL', 'CARDINAL', 'DATE', 'CARD...   \n",
-       "4                                    ['ORG', 'CARDINAL']   \n",
-       "...                                                  ...   \n",
-       "10987                     ['TIME', 'CARDINAL', 'PERSON']   \n",
-       "10988                                           ['DATE']   \n",
-       "10989           ['DATE', 'DATE', 'CARDINAL', 'CARDINAL']   \n",
-       "10990                                                NaN   \n",
-       "10991                             ['ORG', 'GPE', 'DATE']   \n",
-       "\n",
-       "                                            Entity Texts  \\\n",
-       "0      ['Ada witch -', '3-mile', 'the Ada Cemetery', ...   \n",
-       "1                       ['in.1 month later', 'this day']   \n",
-       "2      ['Gorman Rd', 'Sand Creek', 'one', 'one', 'Lat...   \n",
-       "3      ['1970', 'one', '211', 'today', 'one', 'two', ...   \n",
-       "4      ['Kappa Delta Sorority - The Kappa Delta Soror...   \n",
-       "...                                                  ...   \n",
-       "10987             ['12 midnight', 'two', 'Sheridan St.']   \n",
-       "10988                                      ['years ago']   \n",
-       "10989          ['18 years old', '70', 'one', 'hundreds']   \n",
-       "10990                                                NaN   \n",
-       "10991  ['the Air Force Academy', 'Survival', 'between...   \n",
-       "\n",
-       "                          GeoTopic Name  GeoTopic Latitude  GeoTopic Longitude  \n",
-       "0                          Ada Cemetery           42.96252           -85.50474  \n",
-       "1                                   NaN                NaN                 NaN  \n",
-       "2                                   NaN                NaN                 NaN  \n",
-       "3                      Sterling Heights           42.58031           -83.03020  \n",
-       "4      Albion College Historical Marker           42.24662           -84.74420  \n",
-       "...                                 ...                ...                 ...  \n",
-       "10987                         City Hall           51.50492            -0.07867  \n",
-       "10988             Pillar of Fire Church           41.41787           -75.06767  \n",
-       "10989                               NaN                NaN                 NaN  \n",
-       "10990                               NaN                NaN                 NaN  \n",
-       "10991                               NaN                NaN                 NaN  \n",
-       "\n",
-       "[10992 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df"
+    "# Create the directory if it doesn't exist\n",
+    "fig_dir = \"Q2_Figures\"\n",
+    "os.makedirs(fig_dir, exist_ok=True)\n"
    ]
   },
   {
@@ -756,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -780,6 +441,7 @@
     "plt.title('Top 20 Cities with Most Haunted Places')\n",
     "plt.xlabel('Number of Mentions')\n",
     "plt.tight_layout()\n",
+    "plt.savefig(os.path.join(fig_dir, \"top_20_cities_mention.png\"))\n",
     "plt.show()\n"
    ]
   },
@@ -792,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -816,6 +478,7 @@
     "plt.title('Cities with Most Unique Haunted Locations')\n",
     "plt.xlabel('Number of Unique Haunted Places')\n",
     "plt.tight_layout()\n",
+    "plt.savefig(os.path.join(fig_dir, \"unique_haunted_cities.png\"))\n",
     "plt.show()\n"
    ]
   },
@@ -1041,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1071,6 +734,7 @@
     "    ax.set_xlabel(\"Frequency\")\n",
     "\n",
     "plt.tight_layout()\n",
+    "plt.savefig(os.path.join(fig_dir, \"top_keywords.png\"))\n",
     "plt.show()\n"
    ]
   },
