--- a/2_SpaCY/Task 8 (SpaCY).ipynb
+++ b/2_SpaCY/Task 8 (SpaCY).ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "haunted_places = pd.read_csv(\"data/haunted_places.tsv\", sep=\"\\t\")\n",
+    "haunted_places = pd.read_csv(\"../Datasets/haunted_places.tsv\", sep=\"\\t\")\n",
     "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "def extract_text(description):\n",
