Update notebooks and add merged haunted datasets

--- a/1_Tika_GeoTopic_Parser/source code/hauntedPlaceTextExtraction.ipynb
+++ b/1_Tika_GeoTopic_Parser/source code/hauntedPlaceTextExtraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/haunted_places_entities.tsv', sep='\\t', engine='python')"
+    "df = pd.read_csv('../../Datasets/haunted_places_combine.tsv', sep='\\t', engine='python')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +58,9 @@
        "      <th>city_latitude</th>\n",
        "      <th>Entity Labels</th>\n",
        "      <th>Entity Texts</th>\n",
+       "      <th>GeoTopic Name</th>\n",
+       "      <th>GeoTopic Latitude</th>\n",
+       "      <th>GeoTopic Longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -74,6 +78,9 @@
        "      <td>42.960727</td>\n",
        "      <td>['ORG', 'QUANTITY', 'FAC', 'ORG', 'GPE', 'TIME...</td>\n",
        "      <td>['Ada witch -', '3-mile', 'the Ada Cemetery', ...</td>\n",
+       "      <td>Ada Cemetery</td>\n",
+       "      <td>42.96252</td>\n",
+       "      <td>-85.50474</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -89,6 +96,9 @@
        "      <td>41.986434</td>\n",
        "      <td>['DATE', 'DATE']</td>\n",
        "      <td>['in.1 month later', 'this day']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -104,6 +114,9 @@
        "      <td>41.897547</td>\n",
        "      <td>['FAC', 'GPE', 'CARDINAL', 'CARDINAL', 'TIME',...</td>\n",
        "      <td>['Gorman Rd', 'Sand Creek', 'one', 'one', 'Lat...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -119,6 +132,9 @@
        "      <td>41.897547</td>\n",
        "      <td>['DATE', 'CARDINAL', 'CARDINAL', 'DATE', 'CARD...</td>\n",
        "      <td>['1970', 'one', '211', 'today', 'one', 'two', ...</td>\n",
+       "      <td>Sterling Heights</td>\n",
+       "      <td>42.58031</td>\n",
+       "      <td>-83.03020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -134,9 +150,15 @@
        "      <td>42.243097</td>\n",
        "      <td>['ORG', 'CARDINAL']</td>\n",
        "      <td>['Kappa Delta Sorority - The Kappa Delta Soror...</td>\n",
+       "      <td>Albion College Historical Marker</td>\n",
+       "      <td>42.24662</td>\n",
+       "      <td>-84.74420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -164,6 +186,9 @@
        "      <td>39.836653</td>\n",
        "      <td>['TIME', 'CARDINAL', 'PERSON']</td>\n",
        "      <td>['12 midnight', 'two', 'Sheridan St.']</td>\n",
+       "      <td>City Hall</td>\n",
+       "      <td>51.50492</td>\n",
+       "      <td>-0.07867</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10988</th>\n",
@@ -179,6 +204,9 @@
        "      <td>39.836653</td>\n",
        "      <td>['DATE']</td>\n",
        "      <td>['years ago']</td>\n",
+       "      <td>Pillar of Fire Church</td>\n",
+       "      <td>41.41787</td>\n",
+       "      <td>-75.06767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10989</th>\n",
@@ -194,6 +222,9 @@
        "      <td>39.766098</td>\n",
        "      <td>['DATE', 'DATE', 'CARDINAL', 'CARDINAL']</td>\n",
        "      <td>['18 years old', '70', 'one', 'hundreds']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10990</th>\n",
@@ -207,6 +238,9 @@
        "      <td>39.764055</td>\n",
        "      <td>-105.077206</td>\n",
        "      <td>39.766098</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -224,10 +258,13 @@
        "      <td>38.993881</td>\n",
        "      <td>['ORG', 'GPE', 'DATE']</td>\n",
        "      <td>['the Air Force Academy', 'Survival', 'between...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10992 rows × 12 columns</p>\n",
+       "<p>10992 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -296,23 +333,36 @@
        "10990                                                NaN   \n",
        "10991                             ['ORG', 'GPE', 'DATE']   \n",
        "\n",
-       "                                            Entity Texts  \n",
-       "0      ['Ada witch -', '3-mile', 'the Ada Cemetery', ...  \n",
-       "1                       ['in.1 month later', 'this day']  \n",
-       "2      ['Gorman Rd', 'Sand Creek', 'one', 'one', 'Lat...  \n",
-       "3      ['1970', 'one', '211', 'today', 'one', 'two', ...  \n",
-       "4      ['Kappa Delta Sorority - The Kappa Delta Soror...  \n",
-       "...                                                  ...  \n",
-       "10987             ['12 midnight', 'two', 'Sheridan St.']  \n",
-       "10988                                      ['years ago']  \n",
-       "10989          ['18 years old', '70', 'one', 'hundreds']  \n",
-       "10990                                                NaN  \n",
-       "10991  ['the Air Force Academy', 'Survival', 'between...  \n",
+       "                                            Entity Texts  \\\n",
+       "0      ['Ada witch -', '3-mile', 'the Ada Cemetery', ...   \n",
+       "1                       ['in.1 month later', 'this day']   \n",
+       "2      ['Gorman Rd', 'Sand Creek', 'one', 'one', 'Lat...   \n",
+       "3      ['1970', 'one', '211', 'today', 'one', 'two', ...   \n",
+       "4      ['Kappa Delta Sorority - The Kappa Delta Soror...   \n",
+       "...                                                  ...   \n",
+       "10987             ['12 midnight', 'two', 'Sheridan St.']   \n",
+       "10988                                      ['years ago']   \n",
+       "10989          ['18 years old', '70', 'one', 'hundreds']   \n",
+       "10990                                                NaN   \n",
+       "10991  ['the Air Force Academy', 'Survival', 'between...   \n",
        "\n",
-       "[10992 rows x 12 columns]"
+       "                          GeoTopic Name  GeoTopic Latitude  GeoTopic Longitude  \n",
+       "0                          Ada Cemetery           42.96252           -85.50474  \n",
+       "1                                   NaN                NaN                 NaN  \n",
+       "2                                   NaN                NaN                 NaN  \n",
+       "3                      Sterling Heights           42.58031           -83.03020  \n",
+       "4      Albion College Historical Marker           42.24662           -84.74420  \n",
+       "...                                 ...                ...                 ...  \n",
+       "10987                         City Hall           51.50492            -0.07867  \n",
+       "10988             Pillar of Fire Church           41.41787           -75.06767  \n",
+       "10989                               NaN                NaN                 NaN  \n",
+       "10990                               NaN                NaN                 NaN  \n",
+       "10991                               NaN                NaN                 NaN  \n",
+       "\n",
+       "[10992 rows x 15 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,20 +373,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileExistsError",
+     "evalue": "[Errno 17] File exists: '../../1_Tika_GeoTopic_Parser/Haunted_Places_Text_Files'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileExistsError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# create the folder to store the .txt files\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(\u001b[33m\"\u001b[39m\u001b[33mHaunted_Places_Text_Files\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m../../1_Tika_GeoTopic_Parser/Haunted_Places_Text_Files\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileExistsError\u001b[39m: [Errno 17] File exists: '../../1_Tika_GeoTopic_Parser/Haunted_Places_Text_Files'"
+     ]
+    }
+   ],
    "source": [
     "# create the folder to store the .txt files\n",
     "if not os.path.exists(\"Haunted_Places_Text_Files\"):\n",
-    "    os.mkdir(\"../../Tika_GeoTopic_Parser/Haunted_Places_Text_Files\")\n"
+    "    os.mkdir(\"../../1_Tika_GeoTopic_Parser/Haunted_Places_Text_Files\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m filepath = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m../../1_Tika_GeoTopic_Parser/Haunted_Places_Text_Files/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Write content to the file\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mw\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     11\u001b[39m     f.write(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mLocation: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlocation\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m     f.write(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDescription:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mdescription\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Python/3.13/lib/python/site-packages/IPython/core/interactiveshell.py:325\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    318\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    319\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    320\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    321\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    322\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    323\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m325\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# Iterate over each row and write the description, city, and country to a new .txt file\n",
     "for index, row in df.iterrows():\n",
@@ -344,7 +419,7 @@
     "    location = str(row[\"location\"])\n",
     "    \n",
     "    filename = f\"Haunted_Places_{index}.txt\"\n",
-    "    filepath = f\"../../Tika_GeoTopic_Parser/Haunted_Places_Text_Files/{filename}\"\n",
+    "    filepath = f\"../../1_Tika_GeoTopic_Parser/Haunted_Places_Text_Files/{filename}\"\n",
     "\n",
     "    # Write content to the file\n",
     "    with open(filepath, \"w\", encoding=\"utf-8\") as f:\n",
